--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@
 								</ul>
 							</div>
 							<div class="add-to-profile"> 
-								<button type="button" class="btn btn-outline-primary accordion-toggle" href="addProfileAccordion" data-bs-toggle="accordion"
-								aria-expanded="false">Add profile section</button>
+								<button type="button" class="btn btn-outline-primary accordion-toggle" href="#addProfileAccordion" data-bs-toggle="accordion"
+								aria-expanded="false">Add profile section
+									</button>
 								<!--ACCORDION SECTION--> <!--CAN'T FIGURE OUT HOW TO OPEN FROM A-->
 								<!-- <div class="accordion accordion-flush" id="addProfileAccordion">
 									<div class="accordion-item">
@@ -231,6 +232,7 @@
 									  </div>
 									</div>
 								</div> -->
+									
 							</div>
 							<div class="dropdown more-btn">
 								<button class="btn btn-outline-secondary dropdown-toggle" type="button" id="moreDropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
